<resources>
    <string name="app_name">DoKo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="number_of_players">Mit wie vielen Spielern wollt ihr spielen?</string>

    <string name="name_of_players">Bitte tragt eure Namen ein</string>

    <string name="reservation">Gab es Bedenken bzw. Stille Hochzeit?</string>

    <string name="which_solo">Welches Solo?</string>
    <string name="square">Karo</string>
    <string name="heart">Herz</string>
    <string name="peak">Pik</string>
    <string name="cross">Kreuz</string>
    <string name="knaves">Buben</string>
    <string name="ladies">Damen</string>
    <string name="trump">Trumph</string>
    <string name="meatless">Fleischlos</string>

    <string name="yes">Ja</string>
    <string name="no">Nein</string>

    <string name="name">Name</string>
    <string name="ok">Ok</string>

    <string name="four_players">4</string>
    <string name="five_players">5</string>
    <string name="six_players">6</string>

    <string name="reservation_choice">Welche ?</string>

    <string name="poverty">Armenrecht</string>
    <string name="marriage">Hochzeit</string>
    <string name="quietly_marriage">stille Hochzeit</string>
    <string name="solo">Solo</string>
    <string name="deike">Deike</string>
    <string name="sarah">Sarah</string>
    <string name="write_points">Punkte aufschreiben</string>
    <string name="reh_announcement">Haben die Rehspieler etwas gesagt?</string>
    <string name="contra_announcement">Haben die Contraspieler etwas gesagt?</string>
    <string name="reh">Reh</string>
    <string name="contra">Contra</string>
    <string name="no_90">keine 90</string>
    <string name="no_60">keine 60</string>
    <string name="no_30">keine 30</string>
    <string name="black">Schwarz</string>
    <string name="no_announcement">keine Ansage</string>

    <string name="reh_players">Wer waren die Rehspieler/der Rehspieler?</string>
    <string name="contra_players">Wer waren die Contraspieler?</string>


</resources>

