<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.dklein.doko.DoKo">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="115dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/contra_announcement"
            android:id="@+id/contra_announcement"
            android:layout_marginBottom="30dp"
            android:textColor="#000000"
            android:textStyle="bold"
            android:textAlignment="center"/>

        <Button
            android:text="@string/reh"
            android:id="@+id/reh"
            style="@style/ourButton"/>

        <Button
            android:text="@string/no_90"
            android:id="@+id/reh_no_90"
            style="@style/ourButton"/>

        <Button
            android:text="@string/no_60"
            android:id="@+id/reh_no_60"
            style="@style/ourButton"/>

        <Button
            android:text="@string/no_30"
            android:id="@+id/reh_no_30"
            style="@style/ourButton"/>

        <Button
            android:text="@string/black"
            android:id="@+id/reh_black"
            style="@style/ourButton"/>

        <Button
            android:text="@string/no_announcement"
            android:id="@+id/reh_no_announcement"
            style="@style/ourButton"/>

    </LinearLayout>
</RelativeLayout>