<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.dklein.doko.DoKo">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="115dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/reservation_choice"
            android:id="@+id/reservation_choice"
            android:layout_marginBottom="30dp"
            android:textColor="#000000"
            android:textStyle="bold"
            android:textAlignment="center"/>

        <Button
            android:text="@string/poverty"
            android:id="@+id/poverty"
            style="@style/ourButton"/>

        <Button
            android:text="@string/marriage"
            android:id="@+id/marriage"
            style="@style/ourButton"/>

        <Button
            android:text="@string/quietly_marriage"
            android:id="@+id/quietly_marriage"
            style="@style/ourButton"/>

        <Button
            android:text="@string/solo"
            android:id="@+id/solo"
            style="@style/ourButton"/>
    </LinearLayout>


</RelativeLayout>