<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.dklein.doko.DoKo">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="115dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/number_of_players"
            android:id="@+id/number_of_player"
            android:layout_marginBottom="30dp"
            android:textColor="#000000"
            android:textStyle="bold"
            android:textAlignment="center" />

        <Button
            android:text="@string/four_players"
            android:id="@+id/four_players"
            style="@style/ourButton"/>

        <Button
            android:text="@string/five_players"
            android:id="@+id/five_players"
            style="@style/ourButton" />

        <Button
            android:text="@string/six_players"
            android:id="@+id/six_players"
            style="@style/ourButton"/>
    </LinearLayout>
</RelativeLayout>
