<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.dklein.doko.DoKo"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <GridView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/gridView"
            android:numColumns="4" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:id="@+id/linearLayout"
            android:layout_alignBottom="@+id/gridView"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="49dp">

                <Button
                    android:text="@string/deike"
                    android:id="@+id/deike"
                    style= "@style/ourButton"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp" />

                <Button
                    android:text="@string/sarah"
                    android:id="@+id/sarah"
                    style= "@style/ourButton"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp" />

            </LinearLayout>

            <Button
                android:text="@string/write_points"
                android:id="@+id/writePoints"
                style="@style/ourButton"
                android:layout_marginTop="20dp" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
